# perciption_WS

./: README.md
install/: local_setup.sh  setup.sh
install/custom_msgs_pkg/include/custom_msgs_pkg/custom_msgs_pkg/msg/: detection3_d_list.hpp  object3_d.h  object3_d.hpp  rosidl_generator_c__visibility_control.h  rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_cpp__visibility_control.h
install/custom_msgs_pkg/include/custom_msgs_pkg/custom_msgs_pkg/msg/detail/: bounding_box__builder.hpp  bounding_box__functions.c  bounding_box__rosidl_typesupport_fastrtps_c.h  bounding_box__rosidl_typesupport_fastrtps_cpp.hpp  bounding_box__rosidl_typesupport_introspection_c.h  bounding_box__rosidl_typesupport_introspection_cpp.hpp  bounding_box__struct.h  bounding_box__struct.hpp  bounding_box__traits.hpp  bounding_box__type_support.cpp  bounding_box__type_support.h  detection3_d_list__functions.h  detection3_d_list__rosidl_typesupport_introspection_c.h  detection3_d_list__rosidl_typesupport_introspection_cpp.hpp  detection3_d_list__struct.h  detection3_d_list__struct.hpp  detection3_d_list__type_support.c  detection_list__builder.hpp  detection_list__traits.hpp  detection_list__type_support.cpp  detection_list__type_support.hpp  object3_d__builder.hpp  object3_d__rosidl_typesupport_introspection_cpp.hpp  object3_d__struct.h  object3_d__traits.hpp  object3_d__type_support.c  object3_d__type_support.cpp  object3_d__type_support.h  object3_d__type_support.hpp
install/custom_msgs_pkg/local/lib/python3.10/dist-packages/custom_msgs_pkg-0.0.0-py3.10.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
install/custom_msgs_pkg/share/ament_index/resource_index/parent_prefix_path/: custom_msgs_pkg
install/custom_msgs_pkg/share/ament_index/resource_index/rosidl_interfaces/: custom_msgs_pkg
install/custom_msgs_pkg/share/custom_msgs_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/custom_msgs_pkg/share/custom_msgs_pkg/cmake/: ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  custom_msgs_pkgConfig.cmake  custom_msgs_pkg__rosidl_typesupport_cExport-noconfig.cmake  custom_msgs_pkg__rosidl_typesupport_cExport.cmake  custom_msgs_pkg__rosidl_typesupport_cppExport-noconfig.cmake  custom_msgs_pkg__rosidl_typesupport_introspection_cExport-noconfig.cmake  custom_msgs_pkg__rosidl_typesupport_introspection_cExport.cmake  custom_msgs_pkg__rosidl_typesupport_introspection_cppExport-noconfig.cmake  export_custom_msgs_pkg__rosidl_generator_cExport-noconfig.cmake  export_custom_msgs_pkg__rosidl_generator_cExport.cmake  export_custom_msgs_pkg__rosidl_generator_cppExport.cmake  export_custom_msgs_pkg__rosidl_generator_pyExport-noconfig.cmake  export_custom_msgs_pkg__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_custom_msgs_pkg__rosidl_typesupport_fastrtps_cExport.cmake  export_custom_msgs_pkg__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/custom_msgs_pkg/share/custom_msgs_pkg/msg/: DetectionList.idl
install/custom_msgs_pkg/share/custom_msgs_pkg/msgs/: Object3D.msg
install/perception_pkg/lib/perception_pkg/: cam_stream  depth_estimator  object_detector  perception_processor
install/perception_pkg/share/perception_pkg/: package.sh  package.xml
log/: latest_build
src/custom_msgs_pkg/: CMakeLists.txt  package.xml
src/custom_msgs_pkg/msgs/: BoundingBox.msg  Detection3DList.msg  DetectionList.msg
src/perception_pkg/: setup.py
src/perception_pkg/perception_pkg/: object_detector_2d.py  perception_processor.py
(+5 files in other folders)
